# InformationAgents

./: .gitignore  AGENTS.md  Design.md  PLAN.md  RUNBOOK.md  pyproject.toml
api/: __init__.py  main.py
cli/: trend_radar.py
src/: __init__.py
src/trend_radar/: __init__.py  dedupe.py  runner.py  schemas.py  storage.py
src/trend_radar/collectors/: __init__.py  arxiv.py  base.py  github_readme.py  github_search.py  github_trending.py  hacker_news.py  hugging_face.py  v2ex.py
tests/: __init__.py  test_api.py  test_arxiv.py  test_cli.py  test_dedupe.py  test_frontend_contract.py  test_github_readme.py  test_github_search.py  test_github_trending.py  test_hacker_news.py  test_hugging_face.py  test_runner_storage.py  test_schemas.py  test_v2ex.py
tests/fixtures/: arxiv_response.xml  github_search_response.json  github_trending.html  hacker_news_response.json  hugging_face_models.json  v2ex_hot.json
web/: index.html  package-lock.json  package.json
web/src/: App.tsx
web/src/api/: trendRadar.ts
web/src/components/: DetailDrawer.tsx  ResultTable.tsx  RunSummary.tsx  SourceRail.tsx
web/src/styles/: app.css  tokens.css
